name:                TaxonomyTools
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.0
synopsis:            Tool for parsing, processing, comparing and visualizing taxonomy data
description:         Tool for parsing, processing, comparing and visualizing taxonomy data from flatfile and REST interfaces
                     
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/eggzilla/TaxonomyTools

source-repository this
  type:     git
  location: https://github.com/eggzilla/TaxonomyTools/tree/1.0.0
  tag:      1.0.0

executable TaxIds2Text
  Hs-Source-Dirs:      ./src/Bio/
  main-is:	       TaxIds2Text.hs
  ghc-options:         -Wall -O2
  build-depends:       base >=4.5, cmdargs, Taxonomy, either-unwrap, fgl, bytestring

executable Accessions2TaxIds
  Hs-Source-Dirs:      ./src/Bio/
  main-is:	       Accessions2TaxIds.hs
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  build-depends:       base >=4.5, cmdargs, process, directory, Taxonomy, either-unwrap, fgl, cassava, vector, bytestring, parsec, EntrezHTTP, hxt

executable Ids2TreeCompare
  Hs-Source-Dirs:      ./src/Bio/
  main-is:	       Ids2TreeCompare.hs
  ghc-options:         -Wall -O2    
  build-depends:       base >=4.5, cmdargs, process, directory, Taxonomy, either-unwrap, fgl, cassava, vector, bytestring

executable Ids2Tree
  Hs-Source-Dirs:      ./src/Bio/
  main-is:	       Ids2Tree.hs
  ghc-options:         -Wall -O2    
  build-depends:       base >=4.5, cmdargs, process, directory, Taxonomy, either-unwrap, fgl, cassava, vector, bytestring, aeson

