name:                TaxonomyTools
version:             1.2.0
synopsis:            Tool for parsing, processing, comparing and visualizing taxonomy data
description:         Taxonomy Tool utilizes functions from the Taxonomy library to provide
                     .
                     several commandline utilities for routine-tasks with taxonomy data.
                     .
                     Currently some tools accept either the <ftp://ftp.ncbi.nih.gov/pub/taxonomy/ NCBI taxonomy dump> as input,
                     .
                     while other retrieve the data directly from the <http://www.ncbi.nlm.nih.gov/gquery/ NCBI Entrez REST> interface.
                     .
                     It is planned to support both datasources with each tool.
		     .
		     Usage instructions can be found in the <https://github.com/eggzilla/TaxonomyTools README>
                     .
                     Currently following Tools are included:
                     .
                     * Accessions2TaxIds: 
                     Converts a list of NCBI accession numbers into NCBI taxonomy ids
                     .
                     * TaxIds2Tree: 
                     List of taxonomy ids is converted into a graphical tree representation
                     either as .svg (via graphviz) or as .json (via d3js).
                     .
                     * TaxIds2TreeCompare:
                     Multiple lists of taxonomy ids are converted into a visualisation of the
                     taxonomic tree highlighting the input nodes corresponding to their list.
                     .
                     * TaxIds2Text: 
                     List of taxonomy ids is converted in a short text summary for each node.
                     .
                     * TreeDistance: 
                     Computes the distance between two input nodes on the given tree.
                     
license:             GPL-3
license-file:        LICENSE
author:              Florian Eggenhofer
maintainer:          egg@tbi.univie.ac.at
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==9.0.1, GHC==8.10.4, GHC==8.8.4

source-repository head
  type:     git
  location: https://github.com/eggzilla/TaxonomyTools

source-repository this
  type:     git
  location: https://github.com/eggzilla/TaxonomyTools/tree/1.2.0
  tag:      1.2.0

executable TaxIds2Text
  Hs-Source-Dirs:      ./Biobase/
  main-is:	       TaxIds2Text.hs
  ghc-options:         -Wall -O2
  build-depends:       base >=4.5 && <5, cmdargs, Taxonomy>=1.0.2, either-unwrap, fgl, text

executable Accessions2TaxIds
  Hs-Source-Dirs:      ./Biobase/
  main-is:	       Accessions2TaxIds.hs
  ghc-options:         -Wall -O2 -fno-warn-unused-do-bind
  build-depends:       base >=4.5 && <5, cmdargs, process, directory, Taxonomy>=2.2.0, either-unwrap, fgl, cassava>=0.4.5.1, vector, bytestring, parsec, BiobaseHTTP>=1.1.0, hxt

executable TaxIds2TreeCompare
  Hs-Source-Dirs:      ./Biobase/
  main-is:	       TaxIds2TreeCompare.hs
  ghc-options:         -Wall -O2    
  build-depends:       base >=4.5 && <5, cmdargs, process, directory, Taxonomy>=2.2.0, either-unwrap, fgl, cassava>=0.4.5.1, vector, bytestring

executable TaxIds2Tree
  Hs-Source-Dirs:      ./Biobase/
  main-is:	       TaxIds2Tree.hs
  ghc-options:         -Wall -O2 
  build-depends:       base >=4.5 && <5, cmdargs, process, directory, Taxonomy>=2.2.0, either-unwrap, fgl, cassava>=0.4.5.1, vector, bytestring, aeson

executable TaxIdsDistance
  Hs-Source-Dirs:      ./Biobase/
  main-is:	       TaxIdsDistance.hs
  ghc-options:         -Wall -O2
  build-depends:       base >=4.5 && <5, cmdargs, process, directory, Taxonomy>=2.2.0, either-unwrap, fgl, vector, bytestring
